# boilerplate-fast-api-python

./: .coveragerc  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
boilerplate_fastapi/: main.py
boilerplate_fastapi/helpers/: jwt_helper.py
boilerplate_fastapi/infrastructure/: server.py
boilerplate_fastapi/infrastructure/config/fastapi/: config_fastapi.py
boilerplate_fastapi/tests/integration/: test_health_check.py
boilerplate_fastapi/tests/unit/helpers/: test_jwt_helper.py
docker/developer/: Dockerfile  docker-compose.yaml
docker/production/: docker-compose.yaml
