[tool.poetry]
name = "python-boleto"
version = "0.1.0"
description = ""
authors = ["DiegoBulhoes <diegobulhoesm@gmail.com>"]
readme = "README.md"
packages = [{include = "python_boleto"}]

[tool.poetry.dependencies]
python = "^3.10.5"
uvicorn = "^0.18.3"
fastapi = "^0.83.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
